syntax = "proto3";
option java_package = "net.xdob.ratly.proto.jdbc";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

package ratly.jdbc;

message WrapRequestProto{
  string type = 1;
  bytes msg = 2;
}

message WrapReplyProto{
  bytes relay = 2;
  bytes ex = 3;
}
